--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       <link rel="stylesheet" href="src/style.css" />
- 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="src/style.css" />
+
     <title>AI poem generator</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Welcome to the AI Ukranian poem Generator</h1>
     <script src="src/index.js"></script>
-
-</body>
+    <footer>
+      This AI project was coded by
+      <a href="https://github.com/ladyyasita" target="_blank"
+        >Iaroslava Pozniak</a
+      >
+      and is
+      <a
+        href="https://github.com/ladyyasita/ukranian-poem-generator"
+        target="_blank"
+      >
+        open-sourced on GitHub</a
+      >
+      and is
+      <a href="https://ai-ukranian-poem-generator.netlify.app/" target="_blank"
+        >hosted on Netlify</a
+      >.
+    </footer>
+  </body>
 </html>
