--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="src/style.css" />
 
-    <title>AI poem generator</title>
+    <title>AI Ukranian poem generator</title>
   </head>
   <body>
-    <h1>Welcome to the AI Ukranian poem Generator</h1>
-    <script src="src/index.js"></script>
+    <header><h1>Welcome to the AI Ukranian poem Generator</h1></header>
+    <main>
+      <form>
+        <input type="text" placeholder="Enter the topic of a poem" autofocus required autocomplete="off"/>
+        <input type="submit" />
+      </form>
+      <div> 
+        The poem will go here</div>
+        <br/>
+        By Taras Shevchenko
+      </div>
+    </main>
     <footer>
       This AI project was coded by
       <a href="https://github.com/ladyyasita" target="_blank"
@@ -27,5 +37,6 @@
         >hosted on Netlify</a
       >.
     </footer>
+    <script src="src/index.js"></script>
   </body>
 </html>
