--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <title>AI Ukranian poem generator</title>
   </head>
   <body>
+    <div>
     <header><h1>Welcome to the AI Ukranian poem Generator</h1></header>
     <main>
       <form>
-        <input type="text" placeholder="Enter the topic of a poem" autofocus required autocomplete="off"/>
-        <input type="submit" />
+        <input type="text" placeholder="Enter the topic of a poem" autofocus required autocomplete="off" class="instructions"/>
+        <input type="submit" class="submit-btn" />
       </form>
-      <div> 
+      <div class="poem"> 
         The poem will go here</div>
         <br/>
         By Taras Shevchenko
@@ -37,6 +38,7 @@
         >hosted on Netlify</a
       >.
     </footer>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
