container class added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>AI Ukranian poem generator</title>
   </head>
   <body>
-    <div>
+    <div class="container">
     <header><h1>Welcome to the AI Ukranian poem Generator</h1></header>
     <main>
       <form>
