--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/style.css" />
-
     <title>AI Ukranian poem generator</title>
   </head>
   <body>
     <div class="container">
     <header><h1>Welcome to the AI Ukranian poem Generator</h1></header>
     <main>
-      <form>
+      <form id="poem-gen">
         <input type="text" placeholder="Enter the topic of a poem" autofocus required autocomplete="off" class="instructions"/>
         <input type="submit" class="submit-btn" />
       </form>
-      <div class="poem"> 
-        The poem will go here</div>
+      <div class="poem" id="poem"> 
+       </div>
         <br/>
-        By Taras Shevchenko
       </div>
     </main>
     <footer>
