--- a/index.html
+++ b/index.html
@@ -10,34 +10,39 @@
   </head>
   <body>
     <div class="container">
-    <header><h1>Welcome to the AI Ukranian poem Generator</h1></header>
-    <main>
-      <form id="poem-gen">
-        <input type="text" placeholder="Enter the topic of a poem" autofocus required autocomplete="off" class="instructions"/>
-        <input type="submit" class="submit-btn" />
-      </form>
-      <div class="poem" id="poem"> 
-       </div>
-        <br/>
-      </div>
-    </main>
-    <footer>
-      This AI project was coded by
-      <a href="https://github.com/ladyyasita" target="_blank"
-        >Iaroslava Pozniak</a
-      >
-      and is
-      <a
-        href="https://github.com/ladyyasita/ukranian-poem-generator"
-        target="_blank"
-      >
-        open-sourced on GitHub</a
-      >
-      and is
-      <a href="https://ukranian-poem-generator.netlify.app/" target="_blank"
-        >hosted on Netlify</a
-      >.
-    </footer>
+      <header><h1>Welcome to the AI Ukranian poem Generator</h1></header>
+      <main>
+        <form id="poem-gen-form">
+          <input
+            type="text"
+            placeholder="Enter the topic of a poem"
+            autofocus
+            required
+            autocomplete="off"
+            class="instructions"
+            id="user-instructions"
+          />
+          <input type="submit" class="submit-btn" />
+        </form>
+        <div class="poem" id="poem"></div>
+      </main>
+      <footer>
+        This AI project was coded by
+        <a href="https://github.com/ladyyasita" target="_blank"
+          >Iaroslava Pozniak</a
+        >
+        and is
+        <a
+          href="https://github.com/ladyyasita/ukranian-poem-generator"
+          target="_blank"
+        >
+          open-sourced on GitHub</a
+        >
+        and is
+        <a href="https://ukranian-poem-generator.netlify.app/" target="_blank"
+          >hosted on Netlify</a
+        >.
+      </footer>
     </div>
     <script src="src/index.js"></script>
   </body>
