--- a/index.html
+++ b/index.html
@@ -12,19 +12,22 @@
     <div class="container">
       <header><h1>Welcome to the AI Ukranian poem Generator</h1></header>
       <main>
-        <form id="poem-gen-form">
-          <input
-            type="text"
-            placeholder="Enter the topic of a poem"
-            autofocus
-            required
-            autocomplete="off"
-            class="instructions"
-            id="user-instructions"
-          />
-          <input type="submit" class="submit-btn" />
-        </form>
-        <div class="poem" id="poem"></div>
+        <div class="form-container">
+          <form id="poem-gen-form">
+            <input
+              type="text"
+              placeholder="Enter the topic of a Ukrainian poem"
+              autofocus
+              required
+              autocomplete="off"
+              class="instructions"
+              id="user-instructions"
+            />
+            <input type="submit" class="submit-btn" />
+          </form>
+          <div class="hint"></div>
+        </div>
+        <div class="poem hidden" id="poem"></div>
       </main>
       <footer>
         This AI project was coded by
